--- a/ml.ipynb
+++ b/ml.ipynb
@@ -9,7 +9,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: seaborn in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.13.0)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (0.13.0)Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.1.2 -> 23.3.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Requirement already satisfied: numpy!=1.24.0,>=1.20 in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from seaborn) (1.26.0)\n",
       "Requirement already satisfied: pandas>=1.2 in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from seaborn) (2.1.1)\n",
       "Requirement already satisfied: matplotlib!=3.6.1,>=3.3 in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from seaborn) (3.8.2)\n",
@@ -23,17 +39,7 @@
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib!=3.6.1,>=3.3->seaborn) (2.8.2)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas>=1.2->seaborn) (2023.3.post1)\n",
       "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas>=1.2->seaborn) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.3->seaborn) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.1.2 -> 23.3.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\kisita\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.3->seaborn) (1.16.0)\n"
      ]
     }
    ],
@@ -1443,7 +1449,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9137327487856116"
+       "0.9136732162270826"
       ]
      },
      "execution_count": 31,
